使用Java安全管理器实现用户程序权限限制